--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag ${{ secrets.DOCKER_USERNAME }}/TrendsProjectRJR
+        run: docker build . --file Dockerfile --tag ${{ secrets.DOCKER_USERNAME }}/trendsprojectrjr
 
       - name: Docker Push
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/TrendsProjectRJR
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/trendsprojectrjr
